kubernetes/apps/iot/zoo-fleet/app/httproute-envoy.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zoo-fleet-envoy
  annotations:
    homepage.shamubernetes.com/enabled: "true"
    homepage.shamubernetes.com/name: "Zoo Fleet"
    homepage.shamubernetes.com/description: "Manage household devices"
    homepage.shamubernetes.com/group: "Home"
    homepage.shamubernetes.com/order: "30"
    homepage.shamubernetes.com/favorite: "false"
spec:
  parentRefs:
  - name: envoy-external
    namespace: network
    sectionName: https
  hostnames:
  - "fleet.${HOME_DOMAIN}"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    timeouts:
      request: 300s
      backendRequest: 300s
    backendRefs:
    - name: zoo-fleet
      port: 3000
